<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margenTop_mascota"
    card_view:cardCornerRadius="@dimen/card_corner_radius_cardview">
    <!-- para cuando este como GridLayout podemos poner el lyout_width en 150dp-->
    <LinearLayout
        android:id="@+id/lyMascotaCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp"
        >

        <ImageView
            android:id="@+id/imgvFotoCV"
            android:layout_width="@dimen/tama_horizontal_foto_cardview"
            android:layout_height="wrap_content"
            android:src="@drawable/elefante"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/cd_imagen_foto_cardview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/imgbtnLike"
                android:layout_width="@dimen/tama_Hori_verti_iconohueso"
                android:layout_height="@dimen/tama_Hori_verti_iconohueso"
                android:background="@mipmap/huesoblanco"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/margenLeft_mascota"
                android:paddingRight="@dimen/margenLeft_mascota"
                android:contentDescription="@string/cd_imagen_huesoblanco_cardview"/>


            <TextView
                android:id="@+id/txvNombreCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_nombre"
                android:paddingLeft="@dimen/margenLeft_mascota"
                android:paddingRight="@dimen/margenLeft_mascota"
                android:textStyle="bold"
                android:textSize="@dimen/nombre_cardview"/>

            <TextView
                android:id="@+id/txvCantidadLikeCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_cantidad_like"
                android:paddingLeft="@dimen/margenLeft_mascota"
                android:paddingRight="@dimen/margenLeft_mascota"
                android:textStyle="bold"
                android:textSize="@dimen/cantidad_like_cardview"/>

            <ImageView
                android:id="@+id/imgvCantidadLikeCV"
                android:layout_width="@dimen/tama_Hori_verti_iconohueso"
                android:layout_height="@dimen/tama_Hori_verti_iconohueso"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/margenLeft_mascota"
                android:paddingRight="@dimen/margenLeft_mascota"
                android:src="@mipmap/huesoamarillo"
                android:contentDescription="@string/cd_imagen_huesoamarillo_cardview"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>